Bug fix: header size shrink/grow on click

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    overflow-y: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -18,6 +19,10 @@ code {
 
 
 @layer components {
+    .section {
+        @apply flex
+    }
+
     .col {
         @apply border-r border-slate-300 dark:border-zinc-600 dark:bg-zinc-900
             text-black dark:text-white h-screen cursor-pointer
@@ -26,13 +31,14 @@ code {
     .col-full {
         width: 100%;
         animation-name: WidthFull;
-        animation-duration: 1s;
+        animation-duration: 0.3s;
     }
     
     .col-fit {
         width: 100px;
+        min-width: 100px;
         animation-name: WidthFit;
-        animation-duration: 1s;
+        animation-duration: 0.3s;
     }
 
     .col-fit div {
@@ -40,7 +46,7 @@ code {
     }
 
     .column-header {
-        @apply rotate-[270deg] transform-gpu h-screen grid place-content-center
+        @apply  h-screen flex-none grid place-content-center w-[100px]
     }
 
     .column-content {
@@ -48,12 +54,13 @@ code {
     }
 
     .column-content-visible {
-        animation: 1s ShowContent;
+        animation: 0.3s ShowContent;
     }
 
     .column-content-hidden {
         opacity: 0;
-        animation: 0.4s HideContent;
+        display: none;
+        animation: 0.1s HideContent;
     }
 }
 
@@ -74,14 +81,16 @@ code {
 
     to {
         opacity: 0;
-        display: hidden;
+        width: 0;
+        display: none;
     }
 }
 
 @keyframes ShowContent {
     from { 
+        width: 0;
         opacity: 0;
-        display: hidden;
+        display: none;
     }
 
     to {
