--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ code {
 
 
     .grid-arrangement {
-        grid-template-rows: 1fr auto 1fr;
+        grid-template-rows: 1fr 1fr max-content 1fr 1fr;
     }
     .col-content {
         @apply grid place-content-center h-screen z-50
