added changing border colors

--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@ code {
         --bg-color: #FFF00f;
         --primary-color: #000;
         --secondary-color: #262525;
+        --border-color: #004212;
 
         --primary-color-pre: #000;
         --primary-color-post: #000;
